# ai-assistant

./: .gitignore  LICENSE  README.md  electron-builder.yml  electron.vite.config.mjs  package-lock.json  package.json  test.py
assistant-backend/: .env  NVIDIA Container.spec  WindowsAudioDeviceHost.spec  benchmark_models.py  build_brain.py  main.py  main.spec  prompts.py  requirements.txt  test_lightning.py  test_moondream.py  test_threshold.py  test_vision.py
assistant-backend/career_data/: 1k_kirana_store.md  RAG_Chatbot.md  azure_experience.md  hustlebot_master.md
assistant-backend/career_vector_db/: index.faiss  index.pkl
assistant-backend/meeting_archives/: meeting_2026-03-28_00-45-42_meeting-1774638916142-n4f58tc2.md  meeting_2026-03-28_02-32-42_meeting-1774645334005-dkm7r433.md  meeting_2026-03-28_12-27-12_meeting-1774681008996-be47he63.md  meeting_2026-03-28_12-28-54_meeting-1774681032374-3m60r3qn.md  meeting_2026-03-28_12-45-33_meeting-1774682120064-sx8bkilz.md  meeting_2026-03-31_14-42-58_meeting-1774948329378-iwn2nw7s.md  meeting_2026-03-31_15-04-00_meeting-1774948378408-6o2l6onk.md  meeting_2026-03-31_15-04-01_meeting-1774949640341-qc5h49fe.md  meeting_2026-03-31_15-07-16_meeting-1774949794197-af7bztr6.md  meeting_2026-03-31_15-21-47_meeting-1774950665475-mnngd433.md  (+277 more)
career_data/: 1k_kirana_store.md  RAG_Chatbot.md  azure_experience.md  hustlebot_master.md  shadow_os.md
scripts/: build-backend.js  guard-win-build.js
system-audio-rust/: .gitattributes  Cargo.toml  index.js  package-lock.json  package.json
system-audio-rust/src/: lib.rs
(+7 files in other folders)
