
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "system_audio_rust"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi4", "napi8", "async"] }
napi-derive = "2"
cpal = "0.15.2"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
